name:                toylang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lang#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Mayer
maintainer:          example@example.com
copyright:           Markus Mayer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable toylang
  hs-source-dirs:      .
  ghc-options:         -fprint-potential-instances
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
  other-modules:       ToyLang


